# skala

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  NOTICE.md  README.md  environment-cpu.yml  environment-gpu.yml  environment-gpu_cu12.yml  environment-gpu_cu13.yml  pyproject.toml
.devcontainer/: build_docker.sh  devcontainer.json  skala_dev.Dockerfile
.github/workflows/: docs.yml  examples.yml  gauxc.yml  pypi.yml  test.yml
.github/workflows/pypi/: microsoft-skala.toml  skala-cuda.toml
docs/: .gitignore  ase.ipynb  conf.py  ftorch.rst  index.rst  installation.rst
docs/_static/bib/: data.bib
docs/gauxc/: c-library.rst  cpp-library.rst  fortran-library.rst  index.rst  installation.rst  settings.rst  standalone.rst
docs/gauxc/api/: basis.rst  cmake.rst  exceptions.rst  index.rst  load_balancer.rst  macros.rst  molecular_weights.rst  molecule.rst  molgrid.rst  runtime_environment.rst  xc_integrator.rst
docs/gauxc/scripts/: export-h5.py
docs/model-card/: index.rst  skala-1.0.rst  skala-1.1.rst  skala.rst
docs/pyscf/: gpu4pyscf.rst  scf_settings.ipynb  singlepoint.ipynb
examples/c/gauxc_integration/: CMakeLists.txt  environment-mpi.yml  environment-openmp.yml
examples/c/gauxc_integration/app/: main.c
examples/c/gauxc_integration/cmake/: skala-argtable3.cmake  skala-dep-versions.cmake  skala-gauxc.cmake
examples/cpp/cpp_integration/: README.md  download_model.py  environment.yml  main.cpp  prepare_inputs.py
examples/cpp/gauxc_integration/: .gitignore  CMakeLists.txt  environment-cuda.yml  environment-mpi.yml  environment-openmp.yml  environment.yml
examples/cpp/gauxc_integration/app/: main.cxx
examples/cpp/gauxc_integration/cmake/: skala-cli11.cmake  skala-dep-versions.cmake  skala-eigen3.cmake  skala-gauxc.cmake  skala-hdf5.cmake  skala-sdftd3.cmake
examples/fortran/ftorch_integration/: .gitignore  CMakeLists.txt  environment-cpu.yml  environment.yml
examples/fortran/ftorch_integration/app/: main.f90
examples/fortran/ftorch_integration/cmake/: skala-dep-versions.cmake  skala-flap.cmake  skala-ftorch.cmake
examples/fortran/ftorch_integration/src/: skala_ftorch.cxx  skala_ftorch.f90
examples/fortran/gauxc_integration/: environment-mpi.yml  environment-openmp.yml
examples/fortran/gauxc_integration/cmake/: skala-dep-versions.cmake
src/skala/: _huggingface.py  conftest.py
src/skala/ase/: calculator.py
src/skala/foundry/: __init__.py  client.py  schemas.py
src/skala/functional/: __init__.py  _hashes.py  base.py  layers.py  load.py  model.py  traditional.py
src/skala/functional/utils/: cg.py  irreps.py  pad_ragged.py  symmetric_contraction.py
src/skala/gauxc/: export.py
src/skala/gpu4pyscf/: __init__.py  dft.py  gradients.py  grids.py
src/skala/pyscf/: __init__.py  backend.py  dft.py  features.py  gradients.py  grids.py  memory_estimators.py  numint.py  retry.py
src/skala/utils/: __init__.py  scatter.py
tests/: _ridders.py  conftest.py  test_ase.py  test_download_model.py  test_enhancement_factor.py  test_gauxc_export.py  test_gpu4pyscf_classes.py  test_gpu4pyscf_gradients.py  test_hash_pinning.py  test_huggingface_download.py  test_model.py  test_pyscf_classes.py  test_pyscf_gradients.py  test_scf_retry.py  test_traditional.py  test_utils.py
